--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -2,13 +2,16 @@
 
 body {
 	margin : 0;
+	width : 100vm;
+	height : 100vh;
+	overflow: hidden;
 }
 
 #grid_container {
 	width : 100vm;
 	height : 100vh;
 	display: grid;
-	grid-template-columns : 1fr 3fr 2fr ;
+	grid-template-columns : 1fr 3fr 2fr;
 	grid-template-rows : 1fr 9fr;
 
 }
@@ -20,18 +23,17 @@ body {
 }
 
 #side {
+	text-align: center;
 	grid-column : 1/2;
 	grid-row : 2/3;	
 	margin: 20px 0 20px 20px;
-/* 	
-	background-color : #E4F7BA;
-	opacity:0.8;
-*/
 	background: linear-gradient(35deg, rgba(123, 230, 109, 0.8), rgba(194, 243, 71, 0.8) ,rgba(228, 247, 186, 0.8),rgba(246, 255, 204, 0.8), rgba(255, 255, 240, 0.8));
 	border: 0.5px solid #EAEAEA;
 	border-radius: 10px;
-	text-align: center;
 	padding-top:20px;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 #side_menu {
@@ -42,10 +44,13 @@ body {
 	border-radius: 10px;
 	width: 86%;
 	height: 86%;
+	overflow-y: scroll;
+	box-sizing: border-box;
 	
 }
 
 #side label {
+	text-align: center;
 	font-weight: bold;
 	font-size: 20px;
 	background-color: #C2F347; 
@@ -57,9 +62,14 @@ body {
 }
 
 #content {
+	font-size: 1rem;
+	width: 100%;
+	height: 100%;
 	grid-column : 2/4;
 	grid-row : 2/3;
 	margin: 20px 50px;	
+	box-sizing: border-box;
+	overflow: scroll;
 }
 
 #header_left {
@@ -87,10 +97,13 @@ body {
 }
 
 #header_container {
+	width: 100%;
+	height: 100%;
 	display: grid;
 	place-items: center;
 	grid-template-columns: 1fr 5fr 1fr;
 	grid-template-rows: 3fr 3fr 1fr;
+	box-sizing: border-box;
 	
 }
 
@@ -162,6 +175,8 @@ body {
 	margin-right: 20px;
 	grid-column-gap: 20px;
 	grid-row-gap: 5px;
+	box-sizing: border-box;
+	
 
 }
 
@@ -189,6 +204,7 @@ body {
 	position: relative;
 	margin-right: 10px;
 	margin-bottom: 6px;
+	box-sizing: border-box;
 }
 
 #noti_img{
