--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -171,7 +171,8 @@ nav label {
 	grid-template-rows: 80% 20%;
 	place-items : end end;
 	grid-row-gap: 5px;
-	box-sizing: border-box;
+	border-bottom: 2px solid #C2F347;
+	padding-bottom: 10px;
 	
 
 }
@@ -187,6 +188,10 @@ nav label {
 	grid-row : 2/3;	
 	place-self: end center;
 	font-size: 0.8rem;
+}
+
+#login a {
+	text-decoration: none;
 }
 
 #hi {
