--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -171,7 +171,8 @@ nav label {
 	grid-template-rows: 80% 20%;
 	place-items : end end;
 	grid-row-gap: 5px;
-	box-sizing: border-box;
+	border-bottom: 2px solid #C2F347;
+	padding-bottom: 10px;
 	
 
 }
@@ -187,6 +188,11 @@ nav label {
 	grid-row : 2/3;	
 	place-self: end center;
 	font-size: 0.8rem;
+}
+
+#login a {
+	text-decoration: none;
+
 }
 
 #hi {
@@ -213,13 +219,14 @@ nav label {
 }
 
 #noti_num {
-	font-size : 0.7rem;
+	font-size : 0.6rem;
 	color : white;
 	background-color: red;
 	border-radius: 50%;
-	height: 1rem;
-    width: 1rem;
-    line-height: 1rem;
+	height: 0.9rem;
+    width: 0.9rem;
+    line-height: 0.9rem;
+
     text-align: center;
     display: inline-block;
     place-self: end end;
