--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -72,7 +72,7 @@ form{
     content: '';
     position: absolute;
     bottom: -2px;
-    width: 0%;
+    width: 0;
     height: 2px;
     background-color: #7BE66D;
     transition: .4s;
