--- a/src/main/webapp/resources/css/bootstrap_include.css
+++ b/src/main/webapp/resources/css/bootstrap_include.css
@@ -13,7 +13,7 @@ body {
 	height : 100%;
 	display: grid;
 	grid-template-columns : 19% 62% 19%;
-	grid-template-rows : 75px 110px 600px 200px ;
+	grid-template-rows : 75px 110px 85%;
 }
 
 #header {
@@ -250,7 +250,7 @@ body {
 	height : 100%;
 	display: grid;
 	grid-template-columns : 19% 62% 19%;
-	grid-template-rows : 75px 110px 100% 200px ;
+	grid-template-rows : 75px 110px 85% ;
 }
 
 #header {
@@ -472,4 +472,11 @@ nav label {
 	bottom: 18px;
 	right: -8px;
     z-index: 3;
+}
+.paging_div{
+	text-align: center;
+}
+.paging{
+	display: inline-block;
+	margin-right: 15vw;
 }
