[UPDATE]VIP 체크 기능 추가, 연락처 추가 기능 완료

--- a/src/main/webapp/resources/css/address.css
+++ b/src/main/webapp/resources/css/address.css
@@ -110,7 +110,21 @@ input[id *= "popup"] + label + div > label {
 	display: inline-block;
 }
 
-.vip_add {
+#vip_add + label{
+	vertical-align: middle;
+	display: inline-block;
+	background: url(../images/빈별.png) 0 0 no-repeat;
+	background-position: center;
+	background-size: 25px;
+	width: 35px;
+	height: 35px;
+	border: 0;
+	margin: 5px 5px 5px 0;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+#vip_add:checked + label {
 	vertical-align: middle;
 	display: inline-block;
 	background: url(../images/찬별.png) 0 0 no-repeat;
@@ -120,7 +134,8 @@ input[id *= "popup"] + label + div > label {
 	height: 35px;
 	border: 0;
 	margin: 5px 5px 5px 0;
-	box-sizing: border-box;
+	box-sizing: border-box;	
+	cursor: pointer;
 }
 
 .input_box_one input {
@@ -313,7 +328,7 @@ input[id *= "popup"] + label + div > label {
 }
 
 .subject {
-	text-align: center;
+	text-align: left;
 	font-weight: bold;
 	font-size: 1.1rem;
 }
@@ -323,7 +338,7 @@ input[id *= "popup"] + label + div > label {
  }
  
 .subject table th,td {
- 	width: 14.2%;
+ 	width: auto;
  	padding: 10px;
  }
 
@@ -336,6 +351,38 @@ input[id *= "popup"] + label + div > label {
 	font-weight: normal;
 	font-size: 1rem;
 } 
+
+
+input[id *= "addr_check"] {
+	text-align: center;
+}
+
+input[id *= "addr_vip"] {
+	display: none;
+}
+
+input[id *= "addr_vip"] + label span {
+	width: 20px;
+	height: 20px;
+	background: url(../images/빈별.png) 0 0 no-repeat;
+	background-size: 20px; 
+	cursor: pointer;
+	display: inline-block;
+	margin-left: 10px;
+	float: right;
+}
+
+input[id *= "addr_vip"]:checked + label span {
+	width: 20px;
+	height: 20px;
+	background: url(../images/찬별.png) 0 0 no-repeat;
+	background-size: 20px; 
+	cursor: pointer;
+	display: inline-block;
+	margin-left: 10px;
+	float: right;	
+}
+
  
 .accordion label {
 	font-size: 0.9rem;
@@ -443,7 +490,7 @@ input[id *= "accordion_cb"] {
 
 
 .vip {
-	background: url(../images/빈별.png) 0 0 no-repeat;
+	background: url(../images/찬별.png) 0 0 no-repeat;
 	background-size: 1.1rem;
 	background-position: left;	
 }
