--- a/src/main/webapp/resources/css/messenger.css
+++ b/src/main/webapp/resources/css/messenger.css
@@ -136,7 +136,7 @@ input[id *= "messenger_menu"] + label span {
 	
 }
 
-input[id *= "messenger_menu"]:checked + label + br + div {
+input[id *= "messenger_menu"]:checked + label + div {
 	max-height: 100%;
 }
 
@@ -154,8 +154,83 @@ input[id *= "messenger_menu"]:checked + label span {
 
 input[id *= "accordion_cb"]:checked + label {
 	font-weight: bold;
-	color: red;
-	
+}
+
+input[name *= accordion_cb_] {
+	display: none;
+}
+
+.chat_room {
+	background: none;
+	font-size: 0.9rem;
+	font-weight: normal;
+	text-align: left;
+	cursor: pointer;
+}
+
+/* 채팅방(article 부분) CSS  */
+
+#bottom_input {
+	width: 58.5%;
+	position: fixed;
+    top: 91%; 
+}
+
+#messageinput {
+	width: 80%;
+	height: 46px;
+	border-radius: 5px;
+	border: 1px solid #EAEAEA;
+	background-color:#EAEAEA;
+	box-sizing: border-box;
+	padding: 0 40px;
+	font-size: 1rem;	
+}
+
+
+#message_send_btn {
+	width: 15%;
+	height: 46px;
+	background-color: #7BE66D;
+	color: #FFF;
+	font-size: 1rem;
+	border: 0;
+	border-radius: 5px;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+#content {
+	position: relative;
+}
+
+#messages {
+	width: 100%;
+	height: 90%;
+	padding: 20px 10px;
+	grid-column : 1/2;
+	grid-row : 1/2;		
+	overflow-y: scroll;
+}
+
+
+
+#chat_grid_container{
+	margin:0;
+	width: 100%;
+	height: 100%;
+	display: grid;
+	grid-template-columns : 75% 25%;
+	grid-template-rows : 90% 10%;
+}
+
+#right_chatRoomDetail{
+	background-color: #E4F7BA;
+	width: 100%;
+	height: 100%;
+
+	grid-column : 2/3;
+	grid-row : 1/3;		
 }
 
 
