--- a/src/main/webapp/resources/css/include.css
+++ b/src/main/webapp/resources/css/include.css
@@ -43,7 +43,7 @@ body {
 	background-color : #FFFFFF;
 }
 
-/* #header_left {
+#header_left {
 	grid-column : 1/2;
 	grid-row : 1/2;	
 	font-size: 3rem;
