[update] 채팅방 별 메세지 불러오기

--- a/src/main/webapp/resources/css/messenger.css
+++ b/src/main/webapp/resources/css/messenger.css
@@ -233,4 +233,14 @@ input[name *= accordion_cb_] {
 	grid-row : 1/3;		
 }
 
+#messages_people {
+	background-color: pink;
+	width: 50%;
+}
+
+#messages_me {
+	background-color: skyblue;
+	width: 50%;
+	
+}
 
