--- a/src/main/webapp/resources/css/address.css
+++ b/src/main/webapp/resources/css/address.css
@@ -24,12 +24,12 @@ input[id *= "popup"]:checked + label + div {
 
 input[id *= "popup"] + label + div > div {
 	position: absolute;
-	top:50%;
+	top:56%;
 	left: 50%;
 	transform:translate(-50%,-50%);
 	width: 40%;
 	min-width : 300px;
-	height: 85vh;
+	height: 75%;
 	background: #fff;
 	z-index: 2;
 	padding: 30px;
